# btts

./: BTTS_FUNCTIONAL_REQUIREMENTS.md  config_btts.example.yaml  pyproject.toml
.opencode/: review-story-1-1.diff
_bmad-output/implementation-artifacts/: 1-1-initialize-project-with-uv-and-package-structure.md  1-2-configuration-loading-and-validation-with-pydantic.md  1-3-structured-logging-setup.md  1-4-retry-decorator-for-api-resilience.md  1-5-polymarket-clob-client-authentication.md  1-6-game-lifecycle-state-machine-and-market-registry.md  2-1-market-discovery-from-json-data-file.md  2-2-scheduled-daily-market-fetch.md  2-3-btts-no-token-selection-and-market-deduplication.md  2-4-three-case-orderbook-liquidity-analysis.md  3-1-buy-order-placement-with-duplicate-prevention.md  3-2-fill-accumulation-tracking-via-polling.md  3-3-automatic-sell-order-placement-on-fill-threshold.md  4-1-pre-kickoff-sell-consolidation-and-buy-cancellation.md  4-2-game-start-order-cancellation-detection-and-sell-re-placement.md  sprint-status.yaml  (+8 more)
btts_bot/: __main__.py  config.py  constants.py  logging_setup.py  main.py  retry.py
tests/: test_clob_client.py  test_config.py  test_data_api.py  test_fill_polling.py  test_game_lifecycle.py  test_game_start.py  test_gamma_client.py  test_liquidity.py  test_logging_setup.py  test_main.py  test_market_discovery.py  test_market_logger_adapter.py  test_market_registry.py  test_order_execution.py  test_order_tracker.py  test_position_tracker.py  test_pre_kickoff.py  test_reconciliation.py  test_retry.py  test_scheduling.py  test_thread_safety.py
(+26 files in other folders)
