[project]
name = "btts-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "py-clob-client>=0.34.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"
